--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MVC.view.PersonNameMVC"></activity>
-        <activity android:name=".MVP.view.PersonNameMVP" />
+        <activity android:name=".mvvm.view.PersonNameMVVM"></activity>
+        <activity android:name=".mvc.view.PersonNameMVC" />
+        <activity android:name=".mvp.view.PersonNameMVP" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
